--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,9 @@ jdk:
 services:
 - mysql
 - redis-server
-
+cache:
+  directories:
+  - $HOME/.m2/repository
 before_install:
   - mysql -e 'CREATE DATABASE reader;'
 
