--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,6 @@ cache:
 before_install:
   - mysql -e 'CREATE DATABASE reader;'
 script:
-  - mvn  io.takari:maven:wrapper
-  - mvn install test
+  - ./mvnw install test
 
 
