--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,8 @@ jdk:
 services:
 - mysql
 - redis-server
+install:
+  - mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
 cache:
   directories:
   - $HOME/.m2/repository
