--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,8 +1,9 @@
 
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/reader?useUnicode=true&characterEncoding=utf8&autoReconnect=true
-spring.datasource.username=root
+spring.datasource.username=root 
 spring.datasource.password=
+spring.datasource.schema=classpath:db/schema.sql
 spring.redis.database=0
 spring.redis.host=localhost
 spring.redis.port=6379
